# remote_socket_protocol

./: .gitignore  Makefile  Makefile.windows  README.md  RMtoRM.plan  TODO.txt  architecture.md  encrypted_transfer.plan  endorsements.md  es_rules.plan  messages.md  messages.proto  protocol.md  resource_manager.md  resource_query_language.md  vibe.md
client/cpp/: Makefile  rsp_c_api.cpp  rsp_c_api.h  rsp_client.cpp  rsp_client.hpp  rsp_client_export.hpp  rsp_client_message.cpp  rsp_client_message.hpp
client/cpp_full/: Makefile  rsp_client.cpp  rsp_client.hpp
client/nodejs/: messages.js  ping.js  rsp_client.js  rsp_net.js
client/nodejs_full/: package.json  ping.js  proto_registry.js  rsp_client.js  rsp_net.js
client/python/: messages.py  ping.py  rsp_client.py  rsp_net.py
client/rust/: Cargo.toml  build.rs
client/rust/src/: client.rs  lib.rs  messages.rs
common/: Makefile  ascii_handshake.cpp  ascii_handshake.hpp  base_types.cpp  base_types.hpp  keypair.cpp  keypair.hpp  message_queue.cpp  message_queue.hpp  node.cpp  node.hpp  ping_trace.hpp  service_message.hpp  version.h
common/config/: message_rules.cpp  message_rules.hpp
common/encoding/: encoding.cpp  encoding.hpp
common/endorsement/: endorsement.cpp  endorsement.hpp  endorsement_text.cpp  endorsement_text.hpp  field_resolver.cpp  field_resolver.hpp  well_known_endorsements.h
endorsement_service/: endorsement_service.cpp  endorsement_service.hpp  endorsement_service_main.cpp
integration/chromium/modification/chrome/browser/rsp/: BUILD.gn  rsp_config.h  rsp_connection_manager.cc  rsp_connection_manager.h  rsp_http_helper.cc  rsp_http_helper.h  rsp_keyed_service.cc  rsp_keyed_service.h  rsp_prefs.cc  rsp_prefs.h  rsp_scheme_url_loader_factory.cc  rsp_scheme_url_loader_factory.h  rsp_settings_handler.cc  rsp_settings_handler.h  rsp_url_loader_factory.cc  rsp_url_loader_factory.h
keys/: bsd_sockets2.pem
logging/: logging.proto
name_service/: name_service.cpp  name_service.hpp  name_service.proto  name_service_main.cpp
os/: Makefile  Makefile.windows  os_fileops.hpp  os_random.hpp  os_socket.hpp
os/linux/: os_fileops.cpp  (+2 more)
resource_manager/: resource_manager.cpp  resource_manager.hpp  resource_manager_main.cpp  schema_registry.hpp
resource_service/: resource_service.cpp  resource_service.hpp  resource_service_main.cpp  schema_helpers.hpp
scripts/: combine_protobuf_libs.py  debug_chrome_rsp.js  embed_descriptor.py  generate_messages.py  package-lock.json  test_log_subscribe.js  test_multi_bsd_sockets.js  test_rsp_crash.py  test_rsp_ui.py
test/: base_types_test.cpp  bsd_sockets_web_service_integration.js  client_test.cpp  endorsement_service_test.cpp  endorsement_test.cpp  endorsement_text_test.cpp  httpd_resource_service_test.cpp  keypair_test.cpp  logging_test.cpp  message_hash_test.cpp  message_queue_test.cpp  message_rules_test.cpp  mq_ascii_handshake_test.cpp  mq_authn_test.cpp  mq_authz_test.cpp  mq_signing_test.cpp  node_test.cpp  nodejs_client_reconnect_integration.js  nodejs_client_to_client_minimal.js  nodejs_encrypted_proto_schema_test.js  nodejs_express_integration.js  nodejs_express_stress_integration.js  nodejs_ping_fixture.cpp  nodejs_ping_integration.js  nodejs_socket_integration.js  nodejs_tcp_listen_minimal.js  openssh_stress_integration.sh  python_encrypted_proto_schema_test.py  python_http_server_integration.js  python_http_server_integration.py  python_stream_client_contract_test.py  remote_sshd_integration.sh  remote_sshd_ns_integration.sh  resource_service_json_test.cpp  resource_service_test.cpp  runtime_proto_test.cpp  signing_benchmark.cpp  transcoding_test.cpp  transport_memory_test.cpp  transport_tcp_test.cpp  (+1 more)
(+129 files in other folders)
