[package]
name = "rsp-client-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "rsp_client"
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
once_cell = "1.20"
p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.43", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
