# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("rsp") {
  sources = [
    "rsp_config.h",
    "rsp_connection_manager.cc",
    "rsp_connection_manager.h",
    "rsp_keyed_service.cc",
    "rsp_keyed_service.h",
    "rsp_prefs.cc",
    "rsp_prefs.h",
    "rsp_scheme_url_loader_factory.cc",
    "rsp_scheme_url_loader_factory.h",
    "rsp_settings_handler.cc",
    "rsp_settings_handler.h",
    "rsp_url_loader_factory.cc",
    "rsp_url_loader_factory.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/profiles",
    "//components/keyed_service/core",
    "//components/pref_registry",
    "//components/prefs",
    "//components/user_prefs",
    "//content/public/browser",
    "//mojo/public/cpp/bindings",
    "//net",
    "//services/network/public/cpp",
    "//services/network/public/mojom",
  ]
}
