# Copyright 2026 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("rsp") {
  sources = [
    "rsp_config.h",
    "rsp_connection_manager.cc",
    "rsp_connection_manager.h",
    "rsp_prefs.cc",
    "rsp_prefs.h",
  ]

  deps = [
    "//base",
    "//chrome/browser/profiles",
    "//components/pref_registry",
    "//components/prefs",
    "//components/proxy_config",
  ]
}
